--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "jsx": "preserve",
     "moduleResolution": "Node",
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "./src",
     "lib": ["ESNext", "DOM"],
-    "module": "commonjs",
+    "module": "CommonJS",
     "target": "ES5",
     "outDir": "lib",
     "declaration": true,
@@ -14,8 +14,8 @@
       "i-render": ["index.ts"]
     }
   },
-  "exclude": ["lib"],
-  "include": [
-    "**/*.ts",  "**/*.tsx",
-  ],
+  "exclude": ["lib", "node-modules"],
+  // "include": [
+  //   "**/*.ts",  "**/*.tsx",
+  // ],
 }
