--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "i-render",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "light and fast image render based on webgl.",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "scripts": {
     "start": "tsc --watch | npm run dev",
     "build": "tsc&&node ./build/index.js",
