--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "rootDir": ".",
     "baseUrl": "./src",
     "lib": ["ESNext", "DOM"],
-    "module": "CommonJS",
+    "module": "ES6",
     "target": "ES5",
     "outDir": "lib",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
+    "removeComments": true,
     "paths": { 
       "i-render": ["index.ts"]
     }
