--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/addons": "^6.1.17",
+    "@storybook/react": "^6.1.17",
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.42",
     "babel-loader": "^8.1.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "terser": "^4.8.0",
     "typescript": "^3.9.6"
   },
