--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "start": "tsc --watch | npm run dev",
+    "start": "npm run dev",
     "build": "tsc&&node ./build/index.js",
     "dev": "start-storybook -p 6006",
     "build-storybook": "npm run build && build-storybook -o ./docs"
@@ -28,7 +28,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "terser": "^4.8.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.2"
   },
   "peerDependencies": {
     "react": "^16.8.0"
