--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i-render",
-  "version": "0.0.22",
+  "version": "0.0.24",
   "description": "light and fast image render based on webgl.",
   "main": "lib/src/index.js",
   "files": [
@@ -11,7 +11,8 @@
     "start": "npm run dev",
     "build": "tsc&&node ./build/index.js",
     "dev": "start-storybook -p 6006",
-    "build-storybook": "npm run build && build-storybook -o ./docs"
+    "build-storybook": "npm run build && build-storybook -o ./docs",
+    "prepublishOnly": "npm run build && npm run build-storybook "
   },
   "author": "cofeewithrose",
   "license": "MIT",
@@ -25,6 +26,7 @@
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.42",
     "babel-loader": "^8.1.0",
+    "husky": "^5.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "terser": "^4.8.0",
