--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "tsc&&node ./build/index.js",
     "dev": "start-storybook -p 6006",
     "build-storybook": "npm run build && build-storybook -o ./docs",
-    "prepublishOnly": "npm run build && npm run build-storybook "
+    "prepublishOnly": "npm run build && npm run build-storybook ",
+    "prepare": "husky install"
   },
   "author": "cofeewithrose",
   "license": "MIT",
