fix create performence

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "tsc&&node ./build/index.js",
-    "dev": "start-storybook -p 6006",
+    "dev": "tsc --watch | start-storybook -p 6006",
     "build-storybook": "npm run build && build-storybook -o ./docs",
     "prepublishOnly": "npm run build && npm run build-storybook ",
     "prepare": "husky install"
