--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "tsc&&node ./build/index.js",
-    "dev": "tsc --watch | start-storybook -p 6006",
+    "dev": "start-storybook -p 6006",
     "build-storybook": "npm run build && build-storybook -o ./docs",
     "prepublishOnly": "npm run build && npm run build-storybook ",
     "prepare": "husky install"
@@ -18,20 +18,20 @@
   "author": "cofeewithrose",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/addons": "^6.1.17",
-    "@storybook/react": "^6.1.17",
-    "@types/node": "^14.0.22",
-    "@types/react": "^16.9.42",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/addons": "^6.1.21",
+    "@storybook/react": "^6.1.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^16.14.5",
     "babel-loader": "^8.1.0",
     "husky": "^5.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "terser": "^4.8.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "peerDependencies": {
     "react": "^16.8.0"
