--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,5 +1,5 @@
 {
-  "exclude": ["stories"],
+  "exclude": ["stories", "lib", "node-modules"],
   "extends": "./tsconfig.json"
   // "include": [
   //   "**/*.ts",  "**/*.tsx",
