--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "tsc --project ./tsconfig.publish.json &&node ./build/index.js",
     "dev": "start-storybook -p 6006",
     "build-storybook": "npm run build && build-storybook -o ./docs",
+    "publish-storybook": "set STORYBOOK_THEME=red&& npm run build  &&  build-storybook -o ./docs   ",
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
     "chromatic": "npx chromatic --project-token e92079f93300"
@@ -21,10 +22,10 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/addons": "^6.1.21",
-    "@storybook/react": "^6.1.21",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@types/node": "^14.14.35",
     "@types/react": "^16.14.5",
     "babel-loader": "^8.1.0",
