--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ES6",
     "target": "ES5",
     "outDir": "lib",
+    "strict": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "removeComments": false,
